refactor spotify